[package]
name = "lw-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
lw-config = { path = "../config" }
lw-orchestrator = { path = "../orchestrator" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
http-body-util = "0.1"
bytes = "1"
dashmap = "6"
